# highfrontier

./: .gitignore  .leo-test-commit.txt  .project  .pydevproject  CODEOWNERS  README.md  SimThread.py  TechnologyKnowledgeModel.py  bidding_slider_scaling.py  company.py  crashlog.py  display.py  global_variables.py  gui.py  gui_components.py  intro.log-psyco  intro.py  main.py  market_decisions.py  paths.py  planet.py  primitives.py  proj  pyproject.toml  pytest.ini  requirements.txt  savegame.py  solarsystem.py  technology.py  todo
data/: copyright.txt
docs/: overnight-roadmap-2026-06-10.md  overnight-roadmap-2026-06-11.md
highfrontier/: .project  .pydevproject
pickledmiscellanous/: description.txt  distances
pickledprojections/: projection_-30_NS_180_zoom  projection_-30_NS_45_zoom  projection_-30_NS_90_zoom  projection_-60_NS_180_zoom  projection_-60_NS_45_zoom  projection_-60_NS_90_zoom  projection_-90_NS_180_zoom  projection_-90_NS_45_zoom  projection_-90_NS_90_zoom  projection_0_NS_180_zoom  projection_0_NS_45_zoom  projection_0_NS_90_zoom  projection_30_NS_180_zoom  projection_30_NS_45_zoom  projection_30_NS_90_zoom  projection_60_NS_180_zoom  projection_60_NS_45_zoom  projection_60_NS_90_zoom  projection_90_NS_180_zoom  projection_90_NS_45_zoom  projection_90_NS_90_zoom  to_lf.py
pyui/: __init__.py  base.py  core.py  dialogs.py  grid.py  layouts.py  sheet.py  tree.py  viewer.py
tests/: conftest.py  test_bidding_slider_scaling.py  test_company_byproducts.py  test_company_initialization.py  test_crashlog.py  test_economy_data.py  test_gui_catastrophes.py  (+11 more)
(+193 files in other folders)
